2003-01-26  Earnie Boyd  <earnie@users.sf.net>

	* news-short.html: Remove from cvs as this file is dynamically created.
	* links.shtml, mingwfaq.shtml, mingw-oldfaq.shtml: Merging information
	from mingw-oldfaq.shtml.  Remove the mingw-oldfaq reference from FAQ
	page.
	* mingwfaq.shtml (faq-ridconsole): Add FAQ.

2003-01-13  Nathan Fisher <natbobc@users.sf.net>

	* index.shtml: Removed W3C Icons because compliance breaks when
	news-short.html is updated.

2003-01-12  Nathan Fisher <natbobc@users.sf.net>

	* docs.shtml: Moved to new template
	*	links.shtml: ditto
	* news.shtml: ditto
	* mingwfaq.shtml: ditto
	* history.shtml: HTML 4.01 and CSS1 Compliant
	* licensing.shtml: ditto
	* lists.shtml: ditto
	* msys.shtml: ditto
	
2003-01-11  Nathan Fisher <natbobc@users.sf.net>

	* docs.shtml: Updates towards greater site conformance
	* licensing.shtml: ditto
	* lists.shtml: ditto
	* mingwfaq.shtml: ditto
	* msys.shtml: ditto
	
2003-01-10  Nathan Fisher <natbobc@users.sf.net>

	* bugs.shtml: Validated as HTML 4.01(transitional) and CSS1 compliant
	* download.shtml: ditto
	* index.shtml: ditto
	* ssi/footer.html: Replaced & with &amp; for w3c compliance

2003-01-10  Nathan Fisher <natbobc@users.sf.net>

	* index.shtml: Updated to be w3c transitional compliant
	* mingw.css: Added sm and smi class to replace depreciated SMALL tag
	* ssi/bottombar.html: Used sm class 
	* ssi/footer.html: Used smi class
	* ssi/lsidebar.html: Used smi class

2003-01-08  Earnie Boyd  <earnie@users.sf.net>

	* index.shtml: Add information about the move of the package
	information.
	* ssi/release.html: Modifiy for new binutils release candidate.
	* ChangeLog: Reformat a few entries.

2003-01-05  Nathan Fisher  <natbobc@users.sf.net>

	* download.shtml: Added release ssi after "Download location".

2003-01-05  Nathan Fisher  <natbobc@users.sf.net>

	* download.shtml: Changed title to "MinGW: Download".

2003-01-05  Nathan Fisher  <natbobc@users.sf.net>
