@@ -8,17 +8,17 @@
  href="https://sourceforge.net/project/showfiles.php?group_id=2435" target="_nw">here</a> to verify that there are no newer packages.
 <ul>
 	<li>MinGW <a
- href="http://prdownloads.sourceforge.net/mingw/MinGW-2.0.0-3.exe" target="_nw">Version 2.0.0</a>
+ href="http://prdownloads.sourceforge.net/mingw/MinGW-2.0.0-3.exe" target="_nw">Version 2.0.0</a></li>
 	<li>MSYS <a
- href="http://prdownloads.sourceforge.net/mingw/MSYS-1.0.8.exe" target="_nw">Version 1.0.8</a>
+ href="http://prdownloads.sourceforge.net/mingw/MSYS-1.0.8.exe" target="_nw">Version 1.0.8</a></li>
 </ul>
 
 
 <h4>Package Upgrades</h4>
 <ul>
-	<li>Binutils: <a href="http://prdownloads.sf.net/mingw/binutils-2.13.90-20021006-2.tar.gz" target="_nw">binutils-2.13.90-20021006-2.tar.gz</a>
-	<li>W32api: <a href="http://prdownloads.sf.net/mingw/w32api-2.1.tar.gz" target="_nw">w32api-2.1.tar.gz</a>
-	<li>MinGW Runtime: <a href="http://prdownloads.sf.net/mingw/mingw-runtime-2.3.tar.gz" target="_nw">mingw-runtime-2.3.tar.gz</a>
+	<li>Binutils: <a href="http://prdownloads.sf.net/mingw/binutils-2.13.90-20021006-2.tar.gz" target="_nw">binutils-2.13.90-20021006-2.tar.gz</a></li>
+	<li>W32api: <a href="http://prdownloads.sf.net/mingw/w32api-2.1.tar.gz" target="_nw">w32api-2.1.tar.gz</a></li>
+	<li>MinGW Runtime: <a href="http://prdownloads.sf.net/mingw/mingw-runtime-2.3.tar.gz" target="_nw">mingw-runtime-2.3.tar.gz</a></li>
 </ul>
 
 
@@ -26,17 +26,19 @@
 <p>We need your help testing the following candidates.</p>
 <ul>
  <li>Debugger: <a
- href="http://prdownloads.sf.net/mingw/gdb-5.2.1-20021009.tar.gz" target="_nw">gdb-5.2.1-20021009.tar.gz</a>
- <li>Java: <a href="http://prdownloads.sf.net/mingw/gcj-3.2-20021210-1.tar.gz" target="_nw">gcj-3.2-20021210-1.tar.gz</a>
- <li>GCC: <a href="http://prdownloads.sf.net/mingw/gcc-3.2.1-core-20021201-2.tar.gz" target="_nw">gcc-3.2.1-core-20021201-2.tar.gz</a>
- <li>Binutils: <a href="http://prdownloads.sf.net/mingw/binutils-2.13.90-20030104-1.tar.gz" target="_nw">binutils-2.13.90-20030104-1.tar.gz</a>
+ href="http://prdownloads.sf.net/mingw/gdb-5.2.1-20021009.tar.gz" target="_nw">gdb-5.2.1-20021009.tar.gz</a></li>
+ <li>Java: <a href="http://prdownloads.sf.net/mingw/gcj-3.2-20021210-1.tar.gz" target="_nw">gcj-3.2-20021210-1.tar.gz</a></li>
+ <li>GCC: <a href="http://prdownloads.sf.net/mingw/gcc-3.2.1-core-20021201-2.tar.gz" target="_nw">gcc-3.2.1-core-20021201-2.tar.gz</a></li>
+ <li>Binutils: <a href="http://prdownloads.sf.net/mingw/binutils-2.13.90-20030104-1.tar.gz" target="_nw">binutils-2.13.90-20030104-1.tar.gz</a></li>
 </ul>
 
 
 <h4>Experimental/Test Packages:</h4>
 <p>We also need some help testing these experimental packages.</p>
 <ul>
-	<li>Ada: <a href="http://prdownloads.sf.net/mingw/gnatgcc-3.3-exp-20021006.tar.gz" target="_nw">gnatgcc-3.3-exp-20021006.tar.gz</a>
+  <li>Ada: <a href="http://prdownloads.sf.net/mingw/gnatgcc-3.3-exp-20021006.tar.gz" target="_nw">gnatgcc-3.3-exp-20021006.tar.gz</a></li>
+  <li>MSYS: <a href="http://prdownloads.sf.net/mingw/MSYS-1.0.9-2003.01.26-1.exe" target="_nw">MSYS 1.0.9 snapshot</a></li>
+  <li>Source Navigator: <a href="http://prdownloads.sf.net/mingw/snavigator-5.2.0-2003.01.27-1.exe" target="_nw">Source Navigator 5.2.0 snapshot</a></li>
 </ul>
 <!--                      End Of Release Info                                -->
 
