@@ -1,3 +1,8 @@
+2003-01-27  Earnie Boyd  <earnie@users.sf.net>
+
+	* ssi/release.html: Add recent MSYS and Source Navigator snapshot
+	releases.
+
 2003-01-26  Earnie Boyd  <earnie@users.sf.net>
 
 	* news-short.html: Remove from cvs as this file is dynamically created.
